--- a/pom.xml
+++ b/pom.xml
@@ -228,12 +228,12 @@
                 <configuration>
                     <!--<overlays>-->
                     <!--<overlay>-->
-                    <!--<groupId>com.dynacrongroup</groupId>-->
+                    <!--<groupId>com.clickconcepts</groupId>-->
                     <!--<artifactId>deployable-standalone-war-not-to-be-used-as-an-overlay</artifactId>-->
                     <!--<skip>true</skip>-->
                     <!--</overlay>-->
                     <!--<overlay>-->
-                    <!--<groupId>com.dynacrongroup</groupId>-->
+                    <!--<groupId>com.clickconcepts</groupId>-->
                     <!--<artifactId>template-or-other-overlay-as-skinny-war</artifactId>-->
                     <!--<excludes>-->
                     <!--<exclude>WEB-INF/lib/*.jar</exclude>-->
@@ -275,7 +275,7 @@
                                 </properties>
                             </deployable>
                             <!--<deployable>-->
-                            <!--<groupId>com.dynacrongroup</groupId>-->
+                            <!--<groupId>com.clickconcepts</groupId>-->
                             <!--<artifactId>template-or-other-overlay-as-skinny-war</artifactId>-->
                             <!--<type>war</type>-->
                             <!--<properties>-->
@@ -444,13 +444,13 @@
 
         <!-- skinny war overlay Example -->
         <!--<dependency>-->
-        <!--<groupId>com.dynacrongroup</groupId>-->
+        <!--<groupId>com.clickconcepts</groupId>-->
         <!--<artifactId>template-or-other-overlay-as-skinny-war</artifactId>-->
         <!--<version>0.00</version>-->
         <!--<type>war</type>-->
         <!--</dependency>-->
         <!--<dependency>-->
-        <!--<groupId>com.dynacrongroup</groupId>-->
+        <!--<groupId>com.clickconcepts</groupId>-->
         <!--<artifactId>template-or-other-overlay-as-skinny-war</artifactId>-->
         <!--<version>0.00</version>-->
         <!--<type>jar</type>-->
